tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/deci_to_deci32.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:deci32 = 5.2

